--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# A* Pathfinding Project
+AstarPathfindingProject/
+AstarPathfindingProject.meta
